--- a/fly.toml
+++ b/fly.toml
@@ -9,15 +9,15 @@ primary_region = 'otp'
 [build]
 
 [http_service]
-  internal_port = 3000
+  internal_port = 9999
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
-
+  fly ips allocate-v4
 [[vm]]
-  memory = '1gb'
+  memory = '2gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
+  memory_mb = 2048
